test/corpus/arrayRule1.txt
================================================================================
Array Rule 1
================================================================================

{
  "source": ["aws.cloudwatch"],
  "detail-type": ["CloudWatch Alarm State Change"],
  "detail": {
    "state": {
      "value": ["ALARM"]
    },
    "configuration": {
      "metrics": {
        "metricStat": {
          "metric": {
            "namespace": ["AWS/EC2"]
          }
        }
      }
    }
  }
}

--------------------------------------------------------------------------------

(document
  (object
    (pair
      (string
        (string_content))
      (array
        (rule_value_array
          (string
            (string_content)))))
    (rule_value_matching
      (string
        (string_content))
      (rule_value_array
        (string
          (string_content))))
    (pair
      (string
        (string_content))
      (object
        (pair
          (string
            (string_content))
          (object
            (pair
              (string
                (string_content))
              (array
                (rule_value_array
                  (string
                    (string_content)))))))
        (pair
          (string
            (string_content))
          (object
            (pair
              (string
                (string_content))
              (object
                (pair
                  (string
                    (string_content))
                  (object
                    (pair
                      (string
                        (string_content))
                      (object
                        (pair
                          (string
                            (string_content))
                          (array
                            (rule_value_array
                              (string
                                (string_content)))))))))))))))))
