test/corpus/normalRulesWithOrWording.txt
================================================================================
Normal Rules With Or Wording
================================================================================

[
  {
    "$or": [{ "cidr": "10.0.0.0/24" }]
  },

  {
    "source": ["aws.cloudwatch"],
    "$or": {
      "metricType": ["MetricType"],
      "namespace": ["AWS/EC2", "AWS/ES"]
    }
  },

  {
    "time": [{ "prefix": "2017-10-02" }],
    "detail": {
      "$or": [{ "numeric": [">", 0, "<=", 5] }, { "cidr": "10.0.0.0/8" }]
    }
  },

  {
    "detail": {
      "$or": [{ "numeric": [">", 0, "<=", 5] }, { "numeric": [">", 10] }]
    }
  }
]

--------------------------------------------------------------------------------

(document
  (array
    (object
      (pair
        (rule_or_matching
          (rule_constant_or)
          (object
            (pair
              (rule_ip_address_matching
                (rule_constant_cidr)
                (string
                  (string_content))))))))
    (object
      (pair
        (rule_value_matching
          (rule_constant_value
            (string_content))
          (rule_value_array
            (string
              (string_content)))))
      (pair
        (rule_or_matching
          (rule_constant_or)
          (rule_value_matching
            (rule_constant_value
              (string_content))
            (rule_value_array
              (string
                (string_content))))
          (rule_value_matching
            (rule_constant_value
              (string_content))
            (rule_value_array
              (string
                (string_content))
              (string
                (string_content)))))))
    (object
      (pair
        (string
          (string_content))
        (array
          (object
            (pair
              (rule_prefix_matching
                (rule_constant_prefix)
                (string
                  (string_content)))))))
      (pair
        (string
          (string_content))
        (object
          (pair
            (rule_or_matching
              (rule_constant_or)
              (object
                (pair
                  (rule_numeric_matching
                    (rule_constant_numeric)
                    (rule_numeric_comparison_sign)
                    (number)
                    (rule_numeric_comparison_sign)
                    (number))))
              (object
                (pair
                  (rule_ip_address_matching
                    (rule_constant_cidr)
                    (string
                      (string_content))))))))))
    (object
      (pair
        (string
          (string_content))
        (object
          (pair
            (rule_or_matching
              (rule_constant_or)
              (object
                (pair
                  (rule_numeric_matching
                    (rule_constant_numeric)
                    (rule_numeric_comparison_sign)
                    (number)
                    (rule_numeric_comparison_sign)
                    (number))))
              (object
                (pair
                  (rule_numeric_matching
                    (rule_constant_numeric)
                    (rule_numeric_comparison_sign)
                    (number)))))))))))
